fix(Achievement form preview): Fixed file overlap

--- a/src/public/css/main_en.css
+++ b/src/public/css/main_en.css
@@ -11360,3 +11360,6 @@ label[for=searchInputnoCT]::after {
 .contractsYearlyPreview {
   height: 100%;
 }
+.achivementFormPreview {
+  height: calc(100% - 66px);
+}
